--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ nav.main-menu {
      width: 96%;
      float: left;
      font-size: 17px;
-     color: #149dc7;
+     color: #000000;
      text-align: center;
 }
 
