--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@
 
 html {
      scroll-behavior: smooth;
+    
 }
 
 body {
@@ -702,3 +703,9 @@ footer{
 
 
 
+html.Oscuro{
+     filter: invert(100%);
+}
+html.Oscuro img{
+     filter: invert(100%);
+}
