--- a/css/style.css
+++ b/css/style.css
@@ -720,3 +720,19 @@ html.Oscuro img{
      position: relative;
      box-shadow: 0px 0px 8px 0px;
 }
+
+.about_nosotros {
+     color: white;
+     width: 100%;
+     float: left;
+     background-image: url(../images/bad-1818947_1920.jpg);
+     height: auto;
+     padding: 100px 0px;
+     background-size: 100%;
+     background-repeat: no-repeat;
+    
+ }
+
+ .nosotrosletter{
+      color: white;
+ }
