--- a/css/style.css
+++ b/css/style.css
@@ -725,7 +725,7 @@ html.Oscuro img{
      color: white;
      width: 100%;
      float: left;
-     background-image: url(../images/bad-1818947_1920.jpg);
+     background-image: url(../images/city.jpg);
      height: auto;
      padding: 100px 0px;
      background-size: 100%;
