--- a/css/style.css
+++ b/css/style.css
@@ -711,8 +711,8 @@ html.Oscuro img{
 }
 
 .confi{
-     width: 100%;
-     float: left;
+     width: auto;
+     float: center;
      background-color: #ffffff;
      height: auto;
      padding: 60px 20px;
@@ -736,3 +736,122 @@ html.Oscuro img{
  .nosotrosletter{
       color: white;
  }
+
+ .seccion-perfil-usuario .perfil-usuario-body,
+ .seccion-perfil-usuario {
+     display: flex;
+     flex-wrap: wrap;
+     flex-direction: column;
+     align-items: center;
+ }
+ 
+ .seccion-perfil-usuario {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     background: linear-gradient(#149dc7, transparent);
+     margin-bottom: 1.25rem;
+ }
+ 
+  .perfil-usuario-portada {
+     display: block;
+     position: relative;
+     width: 100%;
+     height: 17rem;
+     background: linear-gradient(45deg, #BC3CFF, #317FFF);
+     border-radius: auto;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-portada .boton-portada {
+     position: relative;
+     top: 1rem;
+     right: 1rem;
+     border: 0;
+     border-radius: 8px;
+     padding: auto;
+     background-color: rgba(0, 0, 0, .5);
+     color: #fff;
+     cursor: pointer;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-portada .boton-portada i {
+     margin: auto  ;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-avatar {
+     display: flex;
+     width: 180px;
+     height: 180px;
+     align-items: center;
+     justify-content: center;
+     border: 7px solid #FFFFFF;
+     background-color: #DFE5F2;
+     border-radius: 50%;
+     box-shadow: 0 0 12px rgba(0, 0, 0, .2);
+     position: absolute;
+     bottom: -40px;
+     left: calc(50% - 90px);
+     z-index: 1;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-avatar img {
+     width: 100%;
+     position: relative;
+     border-radius: 50%;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-avatar .boton-avatar {
+     position: absolute;
+     left: -2px;
+     top: -2px;
+     border: 0;
+     background-color: #fff;
+     box-shadow: 0 0 12px rgba(0, 0, 0, .2);
+     width: 45px;
+     height: 45px;
+     border-radius: 50%;
+     cursor: pointer;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-body {
+     width: 70%;
+     position: relative;
+     max-width: 750px;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-body .titulo {
+     display: block;
+     width: 100%;
+     font-size: 1.75em;
+     margin-bottom: 0.5rem;
+     margin-top: 20px;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-body .texto {
+     color: #848484;
+     font-size: 0.95em;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-footer,
+ .seccion-perfil-usuario .perfil-usuario-bio {
+     display: flex;
+     flex-wrap: wrap;
+     padding: 1.5rem 2rem;
+     box-shadow: 0 0 12px rgba(0, 0, 0, .2);
+     background-color: #fff;
+     border-radius: 15px;
+     width: 100%;
+ }
+ 
+ .seccion-perfil-usuario .perfil-usuario-bio {
+     margin-bottom: 1.25rem;
+     text-align: center;
+ }
+ 
+ 
+     .seccion-perfil-usuario .perfil-usuario-portada,
+     .seccion-perfil-usuario .perfil-usuario-body {
+         width: 100%;
+     }
+
+ 
